[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="madrs"
authors = [
    {name = "Michael Quaye", email = "bookingsbigmike@gmail.com"}
]
description="A multi-agent data research system"
readme="README.md"
license="MIT"
dependencies = [
    'langchain',
    'langgraph',
    'langsmith',
    'anthropic',
    'fastapi',
    'requests',
]
dynamic = ['version']



[project.optional-dependencies]
dev = [
    'python-dotenv',
    'pytest',
    'pytest-cov'
]

[tool.setuptools_scm]
version_file="madrs/_version.py"

[tools.setuptools.packages.find]
where = ["src"]