[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="leo"
authors = [
    {name = "Michael Quaye", email = "bookingsbigmike@gmail.com"}
]
description="An alternative approach to integrating AI/agentic solutions as a mitigation against reduced learning efficiency."
readme="README.md"
license="MIT"
dependencies = [
    'langchain',
    'langgraph',
    'langsmith',
    'anthropic',
    'fastapi',
    'requests',
]
dynamic = ['version']

[project.optional-dependencies]
dev = [
    'python-dotenv',
    'pytest',
    'pytest-cov'
]

[tool.setuptools_scm]
version_file="leo/_version.py"

[tools.setuptools.packages.find]
where = ["src"]